[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/assets/Icons/White/General/Pointers/left pointer_72px.png" type="Texture" id=1]
[ext_resource path="res://src/Scenes/Views/ImageView/ImageViewCover.gd" type="Script" id=2]
[ext_resource path="res://src/assets/Icons/White/Audio/MusicNotes/music_note_500px.png" type="Texture" id=3]


[node name="ImageViewCover" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/separation = 0
alignment = 1
script = ExtResource( 2 )

[node name="Cover" type="TextureButton" parent="."]
margin_top = 105.0
margin_right = 1120.0
margin_bottom = 465.0
rect_min_size = Vector2( 360, 360 )
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_group_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 465.0
margin_right = 1120.0
margin_bottom = 495.0
rect_min_size = Vector2( 0, 30 )
mouse_filter = 2
alignment = 1

[node name="Prior" type="TextureButton" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 529.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="Next" type="TextureButton" parent="HBoxContainer"]
margin_left = 537.0
margin_right = 552.0
margin_bottom = 30.0
rect_min_size = Vector2( 15, 0 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
size_flags_vertical = 3
texture_normal = ExtResource( 1 )
expand = true
stretch_mode = 5
flip_h = true

[node name="CurrentCover" type="Label" parent="HBoxContainer"]
margin_left = 560.0
margin_right = 605.0
margin_bottom = 30.0
rect_min_size = Vector2( 45, 0 )
size_flags_vertical = 3
text = "1/x"
align = 1
valign = 1

[connection signal="button_down" from="HBoxContainer/Prior" to="." method="_on_Prior_button_down"]
[connection signal="button_up" from="HBoxContainer/Prior" to="." method="_on_Prior_button_up"]
[connection signal="pressed" from="HBoxContainer/Prior" to="." method="_on_Prior_pressed"]
[connection signal="button_down" from="HBoxContainer/Next" to="." method="_on_Next_button_down"]
[connection signal="button_up" from="HBoxContainer/Next" to="." method="_on_Next_button_up"]
[connection signal="pressed" from="HBoxContainer/Next" to="." method="_on_Next_pressed"]
